# rust_erc20_payment

./: .env.7z  .gitignore  .gitmodules  Cargo.toml  README.md  config-payments.toml  db.sqlite-shm  db.sqlite-wal  db_error.sqlite
contracts/: multi_transfer_erc20.json
crates/erc20_payment_lib/: Cargo.toml
crates/erc20_payment_lib/migrations/: 20221026000000_init.sql
crates/erc20_payment_lib/src/: config.rs  contracts.rs  db.rs  eth.rs  lib.rs  misc.rs  model.rs  multi.rs  process.rs  runtime.rs  server.rs  service.rs  setup.rs  transaction.rs  utils.rs
crates/erc20_payment_lib/src/db/: connection.rs  model.rs  operations.rs  ops.rs
crates/erc20_payment_lib/src/db/model/: chain_transfer_dao.rs  token_transfer_dao.rs  transfer_in_dao.rs  tx_dao.rs
crates/erc20_payment_lib/src/db/ops/: allowance_ops.rs  chain_transfer.rs  chain_transfer_ops.rs  chain_tx_ops.rs  token_transfer.rs  token_transfer_ops.rs  transfer_in_ops.rs  tx_chain_ops.rs  tx_ops.rs
crates/erc20_payment_lib/src/error/: custom.rs
crates/erc20_payment_lib/src/sender/: allowance.rs  batching.rs  mod.rs  process.rs  service.rs
crates/payment_processor/src/: eth.rs  lib.rs  main.rs  multi.rs  service.rs  setup.rs
crates/payment_processor/src/db/: connection.rs  operations.rs
examples/: generate_transfers.rs  import_tx.rs  request_payment.rs  test_forever.rs  test_sqlx.rs
frontend/: config.json  index.html  main.css  main.js
frontend/assets/: index-674b2e4e.js  index-85035936.js
migrations/: 2022-10-26-init.sql  20221026000000_init.sql  20221104000000_tt.sql
src/: config.rs  contracts.rs  db.rs  db_connection.rs  error.rs  eth.rs  lib.rs  main.rs  misc.rs  model.rs  multi.rs  options.rs  process.rs  runtime.rs  service.rs  setup.rs  transaction.rs  utils.rs
src/db/: connection.rs  operations.rs
src/error/: bag.rs  custom.rs  macros.rs  mod.rs  wrapped.rs
testnet/: .gitignore  Dockerfile  docker-compose.yml  setup_chain.py
