[package]
name = "rust_erc20_payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.18.0" }
tokio = { version = "1", features = ["full"] }
secp256k1 = "0.21.0" # version has to match web3
sha3 = "0.10.6"
