[package]
name = "rust_erc20_payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.18.0" }
tokio = { version = "1", features = ["full"] }
secp256k1 = "0.21.0" # version has to match web3
sha3 = "0.10.6"
lazy_static = "1.4.0"
hex = "0.4.3"
chrono = "0.4.22"
log = "0.4.17"
env_logger = "0.9.1"
rand = "0.8.5"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "1.0.37"
rustc-hex = "2.1.0"
structopt = "0.3.26"
