[package]
name = "erc20_payment_lib"
description = "Payment processor for ERC20 tokens"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
web3 = { workspace = true }
tokio = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
rustc-hex = { workspace = true }
structopt = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
toml = { workspace = true }
